# PrMers

./: .gitignore  1001_ll_result.json  100_ll_result.json  110503prp.mers  11544157pm119.exponent  1257787prp.mers  12720793prp10000.jsav  127_ll_result.json  127_prp_result.json  129_prp_result.json  139pm1192.exponent  139pm1193.exponent  139pm1457.exponent  200_ll_result.json  2151pm1256.exponent  239pm1193.exponent  263pm13527.exponent  2699-2.proof  367pm111981.exponent  4095_ll_result.json  4133pm123.exponent  44159pm123.exponent  500_ll_result.json  541pm1899.exponent  544139pm13.exponent  569pm19.exponent  8191_ll_result.json  91_ll_result.json  CHANGED_FILES_V99.9.txt  CMakeList.txt  CMakeLists.txt  MANIFEST_NATIVE_PFA.json  MODIFICATIONS.md  Makefile  NOTICE.md  README.md  README_AEVUM_REG.md  README_NATIVE_AEVUM_PFA.md  README_POW2_TYPE4_LEAD_CACHE.md  README_THROUGHPUT_AUTO_PFA_BRIDGE.md  (+47 more)
.github/workflows/: build_linux.yml  build_mac_os.yml  build_windows.yml  c-cpp.yml  cmake-multi-platform.yml
2699/proof/: 1350  2025  2699  675
LICENSES/: README.md
docs/: ecm_benchmark.txt  resume_p149_ECM_B1_20000.p95  resume_p9815459_ECM_B1_10000.p95.txt
docs/mersenne2_mixed_crt_2d_half_fast/: README.md  mersenne2_mixed_crt_2d_half_fast.cpp
docs/prmers-bananantt-split/: README.md  find_x4_candidate_ranges.py  prmers_opencl_prp.cl  prmers_opencl_prp.cpp  test_mixed_row_lds_matrix.sh
include/aevum/: AutoPolicy.hpp  EngineAevum.hpp
include/core/: AlgoUtils.hpp  App.hpp  BackupManager.hpp  Logger.hpp  Printer.hpp  Proof.hpp  ProofManager.hpp  ProofManagerMarin.hpp  ProofMarin.hpp  ProofSet.hpp  ProofSetMarin.hpp  QuickChecker.hpp  Spinner.hpp  Version.hpp
include/io/: CliParser.hpp  CurlClient.hpp  Hash.h  JsonBuilder.hpp  MD5.h  Sha3Hash.h  WorktodoManager.hpp  WorktodoParser.hpp  common.h  sha3.h
include/marin/: arith.h  engine.h  engine_gpu.h  file.h  ibdwt.h  mersenne.h  ocl.h
include/math/: Carry.hpp  Cofactor.hpp  GerbiczLiChecker.hpp  Mod64.hpp  Precompute.hpp
include/opencl/: Buffers.hpp  Context.hpp  EventSynchronizer.hpp  Kernels.hpp  NttEngine.hpp  NttPipeline.hpp  Program.hpp
include/ui/: WebGuiServer.hpp
include/util/: CodeHash.hpp  Color.hpp  Crc32.hpp  Fs.hpp  GmpUtils.hpp  OpenCLError.hpp  PathUtils.hpp  StringUtils.hpp  Timer.hpp
kernels/: 1.cl  2.cl  marin.cl  prmers.cl
old/: 127_prp_result.json  CMakeLists.txt  Makefile  README.md  prmers  prmers.cl  prmers.cpp  prmers.ipynb  unit_tests.sh
old/proof/: MD5.h  Sha3Hash copy.h  md5.cpp  proof.cpp
proof/: Hash.h  common.cpp  common.h  proof.h
scripts/: audit_aevum_plans.py  audit_aevum_plans_ubuntu.sh  bench_pow2_type4_ubuntu.sh  benchmark_aevum_vs_marin.sh  build_native_pfa.sh  fix_macos_download.sh  install_native_pfa_dependencies.sh  smoke_aevum_ll_macos.py  test_fft323161_pfa9_ubuntu.sh  test_native_pfa_gpu.sh  test_type4_optimized_ubuntu.sh  validate_v9985.py  validate_v9985_macos.sh  validate_v9985_ubuntu.sh  validate_v9986.py  validate_v9986_macos.sh  validate_v9986_ubuntu.sh
src/: main.cpp  main.d
src/aevum/: AutoPolicy.cpp  AutoPolicy.d  EngineAevum.cpp  EngineAevum.d
src/core/: AlgoUtils.cpp  AlgoUtils.d  App.cpp  App.d  BackupManager.cpp  BackupManager.d  Logger.cpp  Logger.d  Printer.cpp  Printer.d  Proof.cpp  Proof.d  ProofManager.cpp  ProofManager.d  ProofManagerMarin.cpp  ProofManagerMarin.d  ProofMarin.cpp  ProofMarin.d  ProofSet.cpp  ProofSet.d  ProofSetMarin.cpp  ProofSetMarin.d  QuickChecker.cpp  QuickChecker.d  Spinner.cpp  Spinner.d
src/io/: CliParser.cpp  CliParser.d  CurlClient.cpp  JsonBuilder.cpp  JsonBuilder.d  WorktodoManager.cpp  WorktodoManager.d  WorktodoParser.cpp  WorktodoParser.d  common.cpp  common.d  md5.cpp  md5.d  sha3.cpp  sha3.d
src/marin/: gpu.cpp  gpu.d
src/math/: Carry.cpp  Carry.d  Cofactor.cpp  Cofactor.d  GerbiczLiChecker.cpp  Mod64.cpp  Mod64.d  Precompute.cpp  Precompute.d
src/modes/: RunEcm.cpp  RunEcm.d  RunEcmTwistedEdwards.cpp  RunEcmTwistedEdwards.d  RunLlSafeMarin.cpp  RunLlSafeMarin.d  RunMemTest.cpp  RunMemTest.d  RunPM1.d  (+5 more)
tests/: aevum_apple_fused_fftp_test.py  aevum_apple_fused_tailsquare_test.py  aevum_fake_engine.cpp  aevum_pm1_small_factor_policy_test.py  aevum_pow2_type4_source_test.py  aevum_vtrace_prepared_cache_test.py  apple_strict_smoke_source_test.py  macos_default_marin_policy_test.py  native_pfa_cli_source_test.py  prmers_vload2_cpp.txt  prmers_vload4_cl.txt  run_aevum_auto_gpu_matrix.sh  run_aevum_forced_pm1_small_factor_regression.sh  run_aevum_gpu_smoke.sh  run_aevum_prepared_buffer_regression.sh  run_backend_validation_matrix.sh  source_aevum_engine_audit.sh  source_v9935_apple_port_audit.sh  source_v9936_apple_port_audit.sh  source_v9937_apple_port_audit.sh  source_v9938_apple_port_audit.sh  source_v9939_apple_port_audit.sh  source_v9940_apple_port_audit.sh  source_v9941_apple_port_audit.sh  source_v9942_apple_port_audit.sh  source_v9949_github_exact_audit.py  source_v9950_apple_ffthin_gf61_audit.py  stable_backend_stop_bsgs_apple_source_test.py  test_aevum_auto_policy.cpp  test_aevum_auto_policy.sh  test_aevum_default_backend.cpp  test_aevum_default_backend.sh  test_aevum_reg_adapter.cpp  test_aevum_reg_adapter.sh  test_backend_compatibility_cli.sh  test_web_gui_backend_state.cpp  test_web_gui_backend_state.sh  workload_plan_audit_parser_test.py
(+32 files in other folders)
